# international-shipping

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
goods/: admin.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
goods/migrations/: 0001_initial.py  0002_package_article.py  0002_package_article_package_delivery_cost_and_more.py  0003_package_delivery_cost.py  0003_remove_package_price_package_cost.py
