[tool.poetry]
name = "idk"
version = "0.1.0"
description = ""
authors = ["Grigory Malanchuk <grigorymalanchuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
django-filter = "^24.2"
celery = "^5.4.0"
aiohttp = "^3.9.5"
django-redis = "^5.4.0"
flower = "^2.0.1"
mysqlclient = "^2.2.4"
drf-spectacular = "^0.27.2"
django-celery-beat = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
